# 21-PersonnelApi_Logs_Documents/src/controllers/personnel.controller.js
@@ -7,6 +7,19 @@ const Personnel = require('../models/personnel.model');
 
 module.exports = {
    list: async (req, res) => {
+      /*
+         #swagger.tags = ["Personnels"]
+         #swagger.summary = "List Personnels"
+         #swagger.description = `
+            You can send query with endpoint for search[], sort[], page and limit.
+            <ul> Examples:
+                  <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>
+                  <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
+                  <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
+                  <li>URL/?<b>page=2&limit=1</b></li>
+            </ul>
+         `
+    */
       const data = await res.getModelList(Personnel);
 
       res.status(200).send({
@@ -17,6 +30,17 @@ module.exports = {
    },
 
    create: async (req, res) => {
+      /*
+         #swagger.tags = ["Personnels"]
+         #swagger.summary = "Create Personnel"
+         #swagger.parameters['body'] = {
+            in: 'body',
+            required: true,
+            schema: {
+                  $ref: '#/definitions/Personnel'
+            }
+         }
+    */
       // const isFirstAccount = (await Personnel.countDocuments()) === 0;
       // req.body.isAdmin = isFirstAccount ? true : false;
 
@@ -39,6 +63,10 @@ module.exports = {
    },
 
    read: async (req, res) => {
+      /*
+         #swagger.tags = ["Personnels"]
+         #swagger.summary = "Get Single Personnel"
+    */
       const data = await Personnel.findOne({ _id: req.params.id });
 
       res.status(200).send({
@@ -48,7 +76,18 @@ module.exports = {
    },
 
    update: async (req, res) => {
-      // isLead Control:
+      /*
+         #swagger.tags = ["Personnels"]
+         #swagger.summary = "Update Personnel"
+         #swagger.parameters['body'] = {
+            in: 'body',
+            required: true,
+            schema: {
+                  $ref: '#/definitions/Personnel'
+            }
+         }
+    */
+      //__ isLead Control:
       const isLead = req.body?.isLead || false;
       if (isLead) {
          const { departmentId } = await Personnel.findOne(
@@ -73,6 +112,10 @@ module.exports = {
    },
 
    delete: async (req, res) => {
+      /*
+         #swagger.tags = ["Personnels"]
+         #swagger.summary = "Delete Personnel"
+    */
       const data = await Personnel.deleteOne({ _id: req.params.id });
 
       res.status(data.deletedCount ? 204 : 404).send({
